--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,4 +1,6 @@
 $enable-gradients: true;
+$headings-font-weight: 700;
+$headings-margin-bottom: 1rem;
 
 @import '~bootstrap/scss/bootstrap.scss';
 
@@ -30,4 +32,13 @@ img {
   flex-grow: 1;
   overflow-y: auto;
   background-color: $white;
+}
+table {
+  @extend .table;
+  @extend .table-bordered;
+}
+pre {
+  padding: 1rem;
+  background-color: $gray-200;
+  border-radius: $border-radius;
 }
